--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>We Are MANINDRAAAS</title>
+	    <link rel="icon" href="PHOTOs/09.jpg"/>
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body align="center" id="body" >
